[metadata]
name = gdalwrap
version = 1.51b0
description = GDAL python bindings wrapper and helper functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rodrigo-NH/gdalwrap
author = Rodrigo Nascimento Hernandez
author_email = rodrigomdev@gmail.com
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Framework :: IPython
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: GIS

[options]
package_dir=
    =src
packages=find:
[options.packages.find]
where=src
# include_package_data = true
# py_modules=["gdalwrap"]
# packages = src
# packages = find:
# python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
# [options.packages.find]
# where = src/gdalwrap